switching to image to fix crashing on ios safari

--- a/src/assets/scss/pages/home/_hero.scss
+++ b/src/assets/scss/pages/home/_hero.scss
@@ -149,3 +149,13 @@
   top: 0;
   left: 0;
 }
+
+.hero-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
